--- a/style.css
+++ b/style.css
@@ -13,3 +13,37 @@
 .posCenter {
 	margin-left:33%;
 }
+
+.header{
+display: flex;
+justify-content: start;
+font-size: 28px;
+}
+
+.preconteiner{
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.conteiner{
+	text-indent: 30px;
+    margin-right: auto;
+}
+
+.hr-shelf {
+	margin: -60px auto 10px;
+	padding: 0;
+	height: 50px;
+	border: none;
+	border-bottom: 1px solid #1f1209;
+	box-shadow: 0 20px 20px -20px #333;
+	width: 95%;
+}
+
+.footer{
+    height: 150px;
+    background: rgba(75, 75, 74, 0.362);
+    display: flex;
+    justify-content: space-around;
+	
+}
