--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@
 	margin-left:33%;
 }
 
+.colomn{
+display: flex;
+flex-direction: column;
+}
+
 .header{
 display: flex;
 justify-content: start;
